# 2023.1_G1_Funcional_UNO

./: CHANGELOG.md  Deck.hs  Game.hs  Game2.hs  GameLogic.hs  LICENSE  README.md  SpecialCards.hs  Types.hs  x20231-G1-Funcional-UNO.cabal
app/: AuxCards.hs  CardColors.hs  Deck.hs  Game2.hs  GameLogic.hs  Main.hs  Msg.hs  SpecialCards.hs  Types.hs  UI.hs  ValidGame.hs  validGame.hs
app/UI/: PlayCard.hs  SelectColor.hs  Utils.hs
