cabal-version:      3.0
name:               x20231-G1-Funcional-UNO
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             NONE
maintainer:         NONE

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable x20231-G1-Funcional-UNO
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Deck, GameLogic, SpecialCards, Types

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, random, random-shuffle
    hs-source-dirs:   app
    default-language: Haskell2010